Tue Nov  2 14:09:57 2004  Chad Elliott  <elliott_c@ociweb.com>

        * examples/C++NPv2/AC_Client_Logging_Daemon.cpp:
        * tests/Dev_Poll_Reactor_Test.cpp:

          Handle the alternate version of
          ACE_Connector<>::connect_svc_handler and in the process remove a
          SunCC warning.

Tue Nov  2 13:51:15 2004  Chad Elliott  <elliott_c@ociweb.com>

        * ASNMP/asnmp/asn1.cpp:

          Cast literal integer to u_long to match the type of the variable.

        * ace/config-linux-common.h:

          Check for __x86_64__ similarly to __ia64 to get rid of some build
          warnings.

        * examples/IPC_SAP/SSL_SAP/SSL-client.cpp:

          Use size_t instead of int to match the size of void*.

Tue Nov  2 10:15:01 2004  Chad Elliott  <elliott_c@ociweb.com>

        * tests/SOCK_SEQPACK_SCTP_Test.cpp:

          Cast the first parameter to ACE_Thread_Manager::spawn to
          ACE_THR_FUNC (as is done in other tests) to avoid compilation
          problems on Windows.

Mon Nov  1 07:27:11 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * ace/INET_Addr.cpp: Fixed the implementation of

          ACE_INET_Addr (const char port_name[],
                         ACE_UINT32 ip_addr,
                         const char protocol[] = "tcp");

          ACE_INET_Addr (const wchar_t port_name[],
                         ACE_UINT32 ip_addr,
                         const wchar_t protocol[] = "tcp");

          so that they convert the ip_addr into network byte order before
          calling set().  Thanks to Xue Yong Zhi <seclib@seclib.com> for
          reporting this bug and providing the fix.

Tue Nov  2 06:56:21 2004  Chad Elliott  <elliott_c@ociweb.com>

        * performance-tests/SCTP/SCTP.mpc:

          Added verbatim sections to the client projects to adds $(MATHLIB)
          to LDLIBS for gnuace projects.  The math library is needed for
          some UNIX platforms and is set in the corresponding platform_*.GNU