@@ -1,3 +1,11 @@
+Tue Nov  2 18:37:22 2004  Steve Huston  <shuston@riverace.com>
+
+	* tests/SOCK_SEQPACK_SCTP_Test.cpp: Reverted:
+	  Tue Nov  2 10:15:01 2004  Chad Elliott  <elliott_c@ociweb.com>
+	  and changed the Server() and Client() return types from void*
+	  to ACE_THR_FUNC_RETURN to fix compile errors. Also changed a
+	  char to unsigned char to avoid a truncation warning.
+
 Tue Nov  2 14:09:57 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * examples/C++NPv2/AC_Client_Logging_Daemon.cpp:
